tera/src/snapshot_tests/snapshots/tera__snapshot_tests__parser__parser_errors@negation_missing_expr.txt.snap
---
source: tera/src/snapshot_tests/parser.rs
expression: res.unwrap_err()
input_file: tera/src/snapshot_tests/parser_inputs/errors/negation_missing_expr.txt
---
 Syntax error --> [negation_missing_expr.txt:1:7]
  |
1 | {{ not }}
  |        ^---
  = Found `}}` but expected one of: integer, float, string, bool, ident, `-`, `not`, `<`, `{`, `[` or `(`
